@@ -10,6 +10,8 @@ HEAD
 	+ Events: Add possibility to enable watchers by default
 	+ Bugfix: Adding a new field to a model now uses default
 	  value instead of an empty value
+        + Added script and web interface for configuration report, added
+	  more log files to the configuration report
 1.5
 	+ Use built-in authentication
 	+ Use new upstart directory "init" instead of "event.d"
